Обновлен php-шаблон под адаптив. Создана оповещалка при добавлении товара в корзину

--- a/index.html
+++ b/index.html
@@ -805,6 +805,37 @@
       </div>
     </footer>
 
+    <div data-alert class="alert-box cart-added">
+      <div class="row">
+        <div class="medium-12 columns">
+          <span class="h3">Товар добавлен в корзину</span>
+          <table class="checkout-summary">
+            <tfoot>
+              <tr>
+                <th colspan="2">Итого <span class="checkout-total">3950 р.</span></th>
+              </tr>
+            </tfoot>
+            <tbody>
+              <tr>
+                <td><span>Букет</span> Ностальгия</td>
+                <td>2500 р.</td>
+              </tr>
+              <tr>
+                <td><span>Конфеты</span> Ferrero Rocher, 24 шт</td>
+                <td>1300 р.</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="medium-6 columns">
+          <a class="button radius secondary expand close" href="#">Продолжить покупки</a>
+        </div>
+        <div class="medium-6 columns">
+          <a class="button radius info expand" href="/cart/">Оформить заказ</a>
+        </div>
+      </div>
+    </div>
+
     <!-- Модальные окна -->
     <!-- Заказ звонка -->
     <div class="hide" id="callback">
