--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 </div>
               </div>
               <div class="row" data-equalizer>
-                <div class="medium-4 large-12 columns">
+                <!--div class="medium-4 large-12 columns">
                   <fieldset class="colors" data-equalizer-watch>
                     <legend>Цветовая гамма</legend>
                     <input type="checkbox" id="6de3f5" /><label for="6de3f5" style="background-color: #6de3f5;"></label>
@@ -369,7 +369,7 @@
                     <input type="checkbox" id="6d6d6d" /><label for="6d6d6d" style="background-color: #6d6d6d;"></label>
                     <input type="checkbox" id="3e8994" /><label for="3e8994" style="background-color: #3e8994;"></label>
                   </fieldset>
-                </div>
+                </div-->
                 <div class="medium-4 large-12 columns end">
                   <fieldset data-equalizer-watch>
                     <legend>Состав букета</legend>
@@ -378,15 +378,18 @@
                     <input type="checkbox" id="lilly" /><label for="lilly">Лилии</label>
                     <input type="checkbox" id="hriz" /><label for="hriz">Хризантемы</label>
                     <input type="checkbox" id="tulp" /><label for="tulp">Тюльпаны</label>
-                    <input type="checkbox" id="" /><label for="">Розы</label>
-                    <input type="checkbox" id="" /><label for="">Герберы</label>
-                    <input type="checkbox" id="" /><label for="">Лилии</label>
-                    <input type="checkbox" id="" /><label for="">Хризантемы</label>
-                    <input type="checkbox" id="" /><label for="">Тюльпаны</label>
-                    <input type="checkbox" id="" /><label for="">Розы</label>
-                    <input type="checkbox" id="" /><label for="">Герберы</label>
-                    <input type="checkbox" id="" /><label for="">Лилии</label>
-                    <input type="checkbox" id="" /><label for="">Хризантемы</label>
+                    <div class="unknown">
+                      <input type="checkbox" id="" /><label for="">Розы</label>
+                      <input type="checkbox" id="" /><label for="">Герберы</label>
+                      <input type="checkbox" id="" /><label for="">Лилии</label>
+                      <input type="checkbox" id="" /><label for="">Хризантемы</label>
+                      <input type="checkbox" id="" /><label for="">Тюльпаны</label>
+                      <input type="checkbox" id="" /><label for="">Розы</label>
+                      <input type="checkbox" id="" /><label for="">Герберы</label>
+                      <input type="checkbox" id="" /><label for="">Лилии</label>
+                      <input type="checkbox" id="" /><label for="">Хризантемы</label>
+                    </div>
+                    <span class="show-all">Все цветы</span>
                   </fieldset>
                 </div>
               </div>
